--- a/CalculatorApp/app/src/main/res/drawable/output_widget_background.xml
+++ b/CalculatorApp/app/src/main/res/drawable/output_widget_background.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/output"/>
+            <solid android:color="?android:attr/colorAccent"/>
             <corners android:radius="20dp"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/output"/>
+            <solid android:color="?android:attr/colorAccent"/>
             <corners android:radius="20dp"/>
         </shape>
     </item>
