--- a/CalculatorApp/app/src/main/res/values-night/themes.xml
+++ b/CalculatorApp/app/src/main/res/values-night/themes.xml
@@ -13,5 +13,32 @@
         <item name="android:colorAccent">@color/colorAccentDark</item>
     </style>
 
+   <!--  Homescreen Widget Theme
+    <style name="Base.Theme.CalyxCalculatorWidget" parent="Theme.AppCompat.NoActionBar">
+        &lt;!&ndash; Customize your light theme here. &ndash;&gt;
+        &lt;!&ndash; <item name="colorPrimary">@color/my_light_primary</item> &ndash;&gt;
+        <item name="android:colorBackground">@color/colorBackgroundDark</item>
+        <item name="android:textColor">@color/textColorDark</item>
+        <item name="colorPrimary">?android:attr/colorBackground</item>
+        <item name="colorOnPrimary">?android:attr/textColor</item>
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorSurface">@color/colorSurfaceDark</item>
+        <item name="colorSecondaryVariant">@color/colorSurfaceVariantDark</item>
+        <item name="android:colorAccent">@color/colorAccentDark</item>
+    </style>-->
+
+    <style name="Base.Theme.CalyxCalculatorWidget"
+        parent="@android:style/Theme.DeviceDefault.DayNight">
+        <item name="android:colorBackground">@color/colorBackgroundDark</item>
+        <item name="android:textColor">@color/textColorDark</item>
+        <item name="colorPrimary">?android:attr/colorBackground</item>
+        <item name="colorOnPrimary">?android:attr/textColor</item>
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorSurface">@color/colorSurfaceDark</item>
+        <item name="colorSecondaryVariant">@color/colorSurfaceVariantDark</item>
+        <item name="android:colorAccent">@color/colorAccentDark</item>
+    </style>
+
     <style name="Theme.CalyxCalculator" parent="Base.Theme.CalyxCalculator" />
+    <style name="Theme.CalyxCalculatorWidget" parent="Base.Theme.CalyxCalculatorWidget" />
 </resources>
